--- a/scheduler/src/App.css
+++ b/scheduler/src/App.css
@@ -113,8 +113,22 @@ body {
 
 .user-table-container{
   position: absolute;
+  top:0;
+  left:0;
   width: 10%;
-  height: 100%;
+  height: 100vh;
+  overflow: auto;
+  background-color: white;
+  min-width: 150px;
+}
+
+.user-table-container::-webkit-scrollbar{
+  width: 5px;
+  background-color: white;
+}
+.user-table-container::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background-color: rgb(216, 216, 216);
 }
 
 .scheduler-container {
