--- a/scheduler/src/App.css
+++ b/scheduler/src/App.css
@@ -145,3 +145,37 @@ body {
 .user-add-button:hover{
   color: #83b9ff;
 }
+
+.scheduler-modal-background{
+  background-color: #42424233;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  z-index: 3;
+  
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.add-appointment-background-layer{
+  background-color: #3b90ff;
+  color: white;
+  position: absolute;
+  bottom: 15px;
+  right: 15px;
+  width: 40px;
+  height: 40px;
+  z-index: 4;
+
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.add-appointment-background-layer:hover{
+  background-color: #2483ff;
+}
